hub/cluster/conduit-fastboop/instance.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: conduit
  namespace: conduit-fastboop
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  hostnames:
    - matrix.fastboop.win
  parentRefs:
    - name: public
      namespace: ingress-nginx
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: conduit-generic
          port: 80
